// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Creating Components from Fela rules should allow nested theme objects 1`] = `
Array [
  "<style>
    .a {
        color: black
    }

    .b {
        font-size: 16
    }
</style>",
  <rule>
    <rule
        _felaTheme={
            Object {
                "header": Object {
                  "color": "black",
                },
              }
        }
    >
        <div
            className="a b"
        />
    </rule>
</rule>,
]
`;

exports[`Creating Components from Fela rules should compose passThrough props 1`] = `
Array [
  "<style></style>",
  <FelaComponent
    color="red"
    onClick={[Function]}
>
    <FelaComponent
        _felaTheme={Object {}}
        color="red"
        onClick={[Function]}
    >
        <FelaComponent
            _felaRule={[Function]}
            as={undefined}
            className={undefined}
            color="red"
            id={undefined}
            innerRef={undefined}
            onClick={[Function]}
            passThrough={
                Array [
                    "onClick",
                  ]
            }
            style={undefined}
        >
            <FelaComponent
                _felaRule={[Function]}
                _felaTheme={Object {}}
                as={undefined}
                className={undefined}
                color="red"
                id={undefined}
                innerRef={undefined}
                onClick={[Function]}
                passThrough={
                    Array [
                        "onClick",
                      ]
                }
                style={undefined}
            >
                <div
                    className=""
                    color="red"
                    onClick={[Function]}
                />
            </FelaComponent>
        </FelaComponent>
    </FelaComponent>
</FelaComponent>,
]
`;

exports[`Creating Components from Fela rules should compose styles 1`] = `
Array [
  "<style>
    .a {
        color: red
    }

    .b {
        font-size: 16px
    }

    .c {
        line-height: 1.2
    }
</style>",
  <anotherRule>
    <anotherRule
        _felaTheme={Object {}}
    >
        <rule
            _felaRule={[Function]}
            as={undefined}
            className={undefined}
            id={undefined}
            innerRef={undefined}
            passThrough={Array []}
            style={undefined}
        >
            <rule
                _felaRule={[Function]}
                _felaTheme={Object {}}
                as={undefined}
                className={undefined}
                id={undefined}
                innerRef={undefined}
                passThrough={Array []}
                style={undefined}
            >
                <div
                    className="a b c"
                />
            </rule>
        </rule>
    </anotherRule>
</anotherRule>,
]
`;

exports[`Creating Components from Fela rules should extend the rule properties with a function 1`] = `
Array [
  "<style>
    .a {
        color: blue
    }

    .b {
        font-size: 14px
    }

    .c {
        background-color: red
    }
</style>",
  <rule
    bgColor="red"
    extend={[Function]}
>
    <rule
        _felaTheme={Object {}}
        bgColor="red"
        extend={[Function]}
    >
        <div
            className="a b c"
        />
    </rule>
</rule>,
]
`;

exports[`Creating Components from Fela rules should extend the rule properties with an object 1`] = `
Array [
  "<style>
    .a {
        color: blue
    }

    .b {
        font-size: 14px
    }

    .c {
        background-color: red
    }
</style>",
  <rule
    extend={
        Object {
            "backgroundColor": "red",
            "fontSize": "14px",
          }
    }
>
    <rule
        _felaTheme={Object {}}
        extend={
            Object {
                "backgroundColor": "red",
                "fontSize": "14px",
              }
        }
    >
        <div
            className="a b c"
        />
    </rule>
</rule>,
]
`;

exports[`Creating Components from Fela rules should include defaultProps if provided 1`] = `
Array [
  "<style>
    .a {
        color: red
    }

    .b {
        font-size: 16
    }
</style>",
  <rule
    color="red"
>
    <rule
        _felaTheme={Object {}}
        color="red"
    >
        <Comp
            className="a b"
            color="red"
        >
            <div
                className="a b"
            >
                red
            </div>
        </Comp>
    </rule>
</rule>,
]
`;

exports[`Creating Components from Fela rules should not pass props to the element 1`] = `
Array [
  "<style>
    .a {
        color: true
    }

    .b {
        font-size: 16
    }
</style>",
  <rule
    color={true}
    onClick={false}
    onHover={true}
>
    <rule
        _felaTheme={Object {}}
        color={true}
        onClick={false}
        onHover={true}
    >
        <div
            className="a b"
            onClick={false}
        />
    </rule>
</rule>,
]
`;

exports[`Creating Components from Fela rules should only use passed props to render Fela rules 1`] = `
Array [
  "<style>
    .a {
        color: black
    }

    .b {
        font-size: 16px
    }
</style>",
  <rule
    color="black"
    data-foo={true}
>
    <rule
        _felaTheme={Object {}}
        color="black"
        data-foo={true}
    >
        <div
            className="a b"
            data-foo={true}
        />
    </rule>
</rule>,
]
`;

exports[`Creating Components from Fela rules should only use the rule name as displayName 1`] = `
Array [
  "<style>
    .a {
        color: red
    }

    .b {
        font-size: 16
    }
</style>",
  <Button
    as="button"
>
    <Button
        _felaTheme={Object {}}
        as="button"
    >
        <button
            className="a b"
        />
    </Button>
</Button>,
]
`;

exports[`Creating Components from Fela rules should pass all props to the element 1`] = `
Array [
  "<style>
    .a {
        font-size: 16
    }
</style>",
  <rule
    data-foo={true}
    onClick={false}
>
    <rule
        _felaTheme={Object {}}
        data-foo={true}
        onClick={false}
    >
        <div
            className="a"
            data-foo={true}
            onClick={false}
        />
    </rule>
</rule>,
]
`;

exports[`Creating Components from Fela rules should pass extended special props to the component 1`] = `
Array [
  "<style>
    .a {
        color: red
    }

    .b {
        font-size: 16
    }
</style>",
  <rule
    color="blue"
    testProp={
        Object {
            "tabIndex": "-1",
          }
    }
>
    <rule
        _felaTheme={Object {}}
        color="blue"
        testProp={
            Object {
                "tabIndex": "-1",
              }
        }
    >
        <UnderlyingComp
            className="a b"
            testProp={
                Object {
                    "tabIndex": "-1",
                  }
            }
        >
            <div>
                testProp exists
            </div>
        </UnderlyingComp>
    </rule>
</rule>,
  <rule
    color="blue"
>
    <rule
        _felaTheme={Object {}}
        color="blue"
    >
        <UnderlyingComp
            className="a b"
        >
            <div>
                testProp does not exist
            </div>
        </UnderlyingComp>
    </rule>
</rule>,
]
`;

exports[`Creating Components from Fela rules should pass special props to the component 1`] = `
Array [
  "<style>
    .a {
        color: blue
    }

    .b {
        font-size: 16
    }

    .c {
        color: red
    }
</style>",
  <rule
    as="i"
    color="blue"
>
    <rule
        _felaTheme={Object {}}
        as="i"
        color="blue"
    >
        <i
            className="a b"
        />
    </rule>
</rule>,
  <rule
    color="blue"
>
    <rule
        _felaTheme={Object {}}
        color="blue"
    >
        <div
            className="c b"
        />
    </rule>
</rule>,
]
`;

exports[`Creating Components from Fela rules should pass style, as, id, className and innerRef to composed components 1`] = `
Array [
  "<style>
    .a {
        color: green
    }

    .b {
        font-size: 16px
    }

    .c {
        line-height: 1.2
    }
</style>",
  <anotherRule
    as="i"
    color="green"
>
    <anotherRule
        _felaTheme={Object {}}
        as="i"
        color="green"
    >
        <rule
            _felaRule={[Function]}
            as="i"
            className={undefined}
            color="green"
            id={undefined}
            innerRef={undefined}
            passThrough={Array []}
            style={undefined}
        >
            <rule
                _felaRule={[Function]}
                _felaTheme={Object {}}
                as="i"
                className={undefined}
                color="green"
                id={undefined}
                innerRef={undefined}
                passThrough={Array []}
                style={undefined}
            >
                <i
                    className="a b c"
                />
            </rule>
        </rule>
    </anotherRule>
</anotherRule>,
]
`;

exports[`Creating Components from Fela rules should render fela rules depending on the passed props 1`] = `
Array [
  "<style>
    .a {
        color: black
    }

    .b {
        font-size: 16
    }
</style>",
  <rule
    color="black"
>
    <rule
        _felaTheme={Object {}}
        color="black"
    >
        <div
            className="a b"
        />
    </rule>
</rule>,
]
`;

exports[`Creating Components from Fela rules should render progressive 1`] = `
Array [
  <rule
    size="16px"
>
    <rule
        _felaTheme={Object {}}
        size="16px"
    >
        <ProgressiveStyle
            cacheEntries={
                Array [
                    Object {
                      "className": "a",
                      "declaration": "color:red",
                      "media": "",
                      "selector": ".a",
                      "support": "",
                      "type": "RULE",
                    },
                    Object {
                      "className": "b",
                      "declaration": "font-size:16px",
                      "media": "",
                      "selector": ".b",
                      "support": "",
                      "type": "RULE",
                    },
                  ]
            }
            renderer={
                Object {
                    "_emitChange": [Function],
                    "_mergeStyle": [Function],
                    "_renderStyleToClassNames": [Function],
                    "cache": Object {
                      "colorred": Object {
                        "className": "a",
                        "declaration": "color:red",
                        "media": "",
                        "selector": ".a",
                        "support": "",
                        "type": "RULE",
                      },
                      "fontSize16px": Object {
                        "className": "b",
                        "declaration": "font-size:16px",
                        "media": "",
                        "selector": ".b",
                        "support": "",
                        "type": "RULE",
                      },
                      "fontSize18px": Object {
                        "className": "c",
                        "declaration": "font-size:18px",
                        "media": "",
                        "selector": ".c",
                        "support": "",
                        "type": "RULE",
                      },
                    },
                    "clear": [Function],
                    "filterClassName": [Function],
                    "getNextRuleIdentifier": [Function],
                    "isProgressiveRenderer": true,
                    "keyframePrefixes": Array [
                      "-webkit-",
                      "-moz-",
                      "",
                    ],
                    "listeners": Array [],
                    "mediaQueryOrder": Array [],
                    "nodes": Object {},
                    "plugins": Array [],
                    "renderFont": [Function],
                    "renderKeyframe": [Function],
                    "renderRule": [Function],
                    "renderStatic": [Function],
                    "selectorPrefix": "",
                    "subscribe": [Function],
                    "supportQueryOrder": Array [],
                    "uniqueKeyframeIdentifier": 0,
                    "uniqueRuleIdentifier": 3,
                  }
            }
        >
            <style
                dangerouslySetInnerHTML={
                    Object {
                        "__html": ".a{color:red}.b{font-size:16px}",
                      }
                }
                data-fela-rehydration={2}
                data-fela-type="RULE"
                type="text/css"
            />
        </ProgressiveStyle>
        <div
            className="a b"
        />
    </rule>
</rule>,
  <rule
    size="18px"
>
    <rule
        _felaTheme={Object {}}
        size="18px"
    >
        <ProgressiveStyle
            cacheEntries={
                Array [
                    Object {
                      "className": "c",
                      "declaration": "font-size:18px",
                      "media": "",
                      "selector": ".c",
                      "support": "",
                      "type": "RULE",
                    },
                  ]
            }
            renderer={
                Object {
                    "_emitChange": [Function],
                    "_mergeStyle": [Function],
                    "_renderStyleToClassNames": [Function],
                    "cache": Object {
                      "colorred": Object {
                        "className": "a",
                        "declaration": "color:red",
                        "media": "",
                        "selector": ".a",
                        "support": "",
                        "type": "RULE",
                      },
                      "fontSize16px": Object {
                        "className": "b",
                        "declaration": "font-size:16px",
                        "media": "",
                        "selector": ".b",
                        "support": "",
                        "type": "RULE",
                      },
                      "fontSize18px": Object {
                        "className": "c",
                        "declaration": "font-size:18px",
                        "media": "",
                        "selector": ".c",
                        "support": "",
                        "type": "RULE",
                      },
                    },
                    "clear": [Function],
                    "filterClassName": [Function],
                    "getNextRuleIdentifier": [Function],
                    "isProgressiveRenderer": true,
                    "keyframePrefixes": Array [
                      "-webkit-",
                      "-moz-",
                      "",
                    ],
                    "listeners": Array [],
                    "mediaQueryOrder": Array [],
                    "nodes": Object {},
                    "plugins": Array [],
                    "renderFont": [Function],
                    "renderKeyframe": [Function],
                    "renderRule": [Function],
                    "renderStatic": [Function],
                    "selectorPrefix": "",
                    "subscribe": [Function],
                    "supportQueryOrder": Array [],
                    "uniqueKeyframeIdentifier": 0,
                    "uniqueRuleIdentifier": 3,
                  }
            }
        >
            <style
                dangerouslySetInnerHTML={
                    Object {
                        "__html": ".c{font-size:18px}",
                      }
                }
                data-fela-rehydration={3}
                data-fela-type="RULE"
                type="text/css"
            />
        </ProgressiveStyle>
        <div
            className="a c"
        />
    </rule>
</rule>,
]
`;

exports[`Creating Components from Fela rules should use a dev-friendly className and the selectorPrefix 1`] = `
Array [
  "<style>
    .Fela-Button_div__abrv9k {
        font-size: 16
    }
</style>",
  <Button>
    <Button
        _felaTheme={Object {}}
    >
        <div
            className="Fela-Button_div__abrv9k"
        />
    </Button>
</Button>,
]
`;

exports[`Creating Components from Fela rules should use a dev-friendly className with monolithic renderer 1`] = `
Array [
  "<style>
    .Button_div__abrv9k {
        font-size: 16
    }
</style>",
  <Button>
    <Button
        _felaTheme={Object {}}
    >
        <div
            className="Button_div__abrv9k"
        />
    </Button>
</Button>,
]
`;

exports[`Creating Components from Fela rules should use the theme for static rendering by default 1`] = `
Array [
  "<style>
    .a {
        color: red
    }

    .b {
        font-size: 16
    }
</style>",
  <rule>
    <rule
        _felaTheme={
            Object {
                "color": "red",
              }
        }
    >
        <div
            className="a b"
        />
    </rule>
</rule>,
]
`;

exports[`Creating Components with a Proxy for props from Fela rules should allow nested theme objects 1`] = `
Array [
  "<style>
    .a {
        color: black
    }

    .b {
        font-size: 16
    }
</style>",
  <rule>
    <rule
        _felaTheme={
            Object {
                "header": Object {
                  "color": "black",
                },
              }
        }
    >
        <div
            className="a b"
        />
    </rule>
</rule>,
]
`;

exports[`Creating Components with a Proxy for props from Fela rules should compose passThrough props 1`] = `
Array [
  "<style></style>",
  <FelaComponent
    color="red"
    onClick={[Function]}
>
    <FelaComponent
        _felaTheme={Object {}}
        color="red"
        onClick={[Function]}
    >
        <FelaComponent
            _felaRule={[Function]}
            as={undefined}
            className={undefined}
            color="red"
            id={undefined}
            innerRef={undefined}
            onClick={[Function]}
            passThrough={
                Array [
                    "onClick",
                    "onClick",
                    "color",
                  ]
            }
            style={undefined}
        >
            <FelaComponent
                _felaRule={[Function]}
                _felaTheme={Object {}}
                as={undefined}
                className={undefined}
                color="red"
                id={undefined}
                innerRef={undefined}
                onClick={[Function]}
                passThrough={
                    Array [
                        "onClick",
                        "onClick",
                        "color",
                      ]
                }
                style={undefined}
            >
                <div
                    className=""
                    color="red"
                    onClick={[Function]}
                />
            </FelaComponent>
        </FelaComponent>
    </FelaComponent>
</FelaComponent>,
]
`;

exports[`Creating Components with a Proxy for props from Fela rules should compose styles 1`] = `
Array [
  "<style>
    .a {
        color: red
    }

    .b {
        font-size: 16px
    }

    .c {
        line-height: 1.2
    }
</style>",
  <anotherRule>
    <anotherRule
        _felaTheme={Object {}}
    >
        <rule
            _felaRule={[Function]}
            as={undefined}
            className={undefined}
            id={undefined}
            innerRef={undefined}
            passThrough={Array []}
            style={undefined}
        >
            <rule
                _felaRule={[Function]}
                _felaTheme={Object {}}
                as={undefined}
                className={undefined}
                id={undefined}
                innerRef={undefined}
                passThrough={Array []}
                style={undefined}
            >
                <div
                    className="a b c"
                />
            </rule>
        </rule>
    </anotherRule>
</anotherRule>,
]
`;

exports[`Creating Components with a Proxy for props from Fela rules should not pass props used in rules to the element 1`] = `
Array [
  "<style>
    .a {
        color: true
    }

    .b {
        font-size: 16
    }
</style>",
  <rule
    color={true}
    data-foo={true}
    onClick={false}
>
    <rule
        _felaTheme={Object {}}
        color={true}
        data-foo={true}
        onClick={false}
    >
        <div
            className="a b"
            data-foo={true}
            onClick={false}
        />
    </rule>
</rule>,
]
`;

exports[`Creating Components with a Proxy for props from Fela rules should only use passed props to render Fela rules 1`] = `
Array [
  "<style>
    .a {
        color: black
    }

    .b {
        font-size: 16px
    }
</style>",
  <rule
    color="black"
    data-foo={true}
>
    <rule
        _felaTheme={Object {}}
        color="black"
        data-foo={true}
    >
        <div
            className="a b"
            color="black"
            data-foo={true}
        />
    </rule>
</rule>,
]
`;

exports[`Creating Components with a Proxy for props from Fela rules should only use the rule name as displayName 1`] = `
Array [
  "<style>
    .a {
        color: red
    }

    .b {
        font-size: 16
    }
</style>",
  <Button
    as="button"
>
    <Button
        _felaTheme={Object {}}
        as="button"
    >
        <button
            className="a b"
        />
    </Button>
</Button>,
]
`;

exports[`Creating Components with a Proxy for props from Fela rules should pass all props to the element 1`] = `
Array [
  "<style>
    .a {
        font-size: 16
    }
</style>",
  <rule
    data-foo={true}
    onClick={false}
>
    <rule
        _felaTheme={Object {}}
        data-foo={true}
        onClick={false}
    >
        <div
            className="a"
            data-foo={true}
            onClick={false}
        />
    </rule>
</rule>,
]
`;

exports[`Creating Components with a Proxy for props from Fela rules should pass props except innerRef 1`] = `
Array [
  "<style>
    .a {
        color: black
    }

    .b {
        font-size: 16px
    }
</style>",
  <rule
    color="black"
    innerRef={[Function]}
>
    <rule
        _felaTheme={Object {}}
        color="black"
        innerRef={[Function]}
    >
        <div
            className="a b"
        />
    </rule>
</rule>,
]
`;

exports[`Creating Components with a Proxy for props from Fela rules should pass props used in rules specified in passThroughProps to the element 1`] = `
Array [
  "<style>
    .a {
        color: true
    }

    .b {
        font-size: 16
    }
</style>",
  <rule
    color={true}
    data-foo={true}
    onClick={false}
>
    <rule
        _felaTheme={Object {}}
        color={true}
        data-foo={true}
        onClick={false}
    >
        <div
            className="a b"
            color={true}
            data-foo={true}
            onClick={false}
        />
    </rule>
</rule>,
]
`;

exports[`Creating Components with a Proxy for props from Fela rules should render fela rules depending on the passed props 1`] = `
Array [
  "<style>
    .a {
        color: black
    }

    .b {
        font-size: 16
    }
</style>",
  <rule
    color="black"
>
    <rule
        _felaTheme={Object {}}
        color="black"
    >
        <div
            className="a b"
        />
    </rule>
</rule>,
]
`;

exports[`Creating Components with a Proxy for props from Fela rules should use a dev-friendly className and the selectorPrefix 1`] = `
Array [
  "<style>
    .Fela-Button_div__abrv9k {
        font-size: 16
    }
</style>",
  <Button>
    <Button
        _felaTheme={Object {}}
    >
        <div
            className="Fela-Button_div__abrv9k"
        />
    </Button>
</Button>,
]
`;

exports[`Creating Components with a Proxy for props from Fela rules should use a dev-friendly className with monolithic renderer 1`] = `
Array [
  "<style>
    .Button_div__abrv9k {
        font-size: 16
    }
</style>",
  <Button>
    <Button
        _felaTheme={Object {}}
    >
        <div
            className="Button_div__abrv9k"
        />
    </Button>
</Button>,
]
`;

exports[`Creating Components with a Proxy for props from Fela rules should use the theme for static rendering by default 1`] = `
Array [
  "<style>
    .a {
        color: black
    }

    .b {
        font-size: 16
    }
</style>",
  <rule>
    <rule
        _felaTheme={
            Object {
                "color": "black",
              }
        }
    >
        <div
            className="a b"
        />
    </rule>
</rule>,
]
`;
